# douban-api-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: CI.yml  Release.yml  clean_package.yml  test.yml
src/: api.rs  bookapi.rs  config.rs  http.rs  main.rs  params.rs
