[package]
name = "douban-api-rs"
version = "0.2.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
anyhow = "1.0.43"
hyper = { version = "0.14.11", features = ["server"] }
moka = { version = "0.6.0", default-features = false, features = ["future"] }
openssl-probe = { version = "0.1.4", optional = true }
reqwest = { version = "0.11.4", default-features = false, features = ["json", "gzip"] }
serde = { version = "1.0.127", features = ["derive"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio = { version = "1.10.0", features = ["rt-multi-thread", "io-util", "net", "time", "sync", "macros", "parking_lot", "fs"] }
visdom = "0.4.10"
regex = "1.5.4"
serde_json = "1.0"
env_logger = "0.8"
futures = "0.3"
urlencoding = "2.1.0"
lazy_static = "1.4.0"
clap = { version = "3.0.1", features = ["derive", "env", "wrap_help"] }


[features]
default = ["rustls-tls", "atomic64"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored", "openssl-probe"]
atomic64 = ["moka/atomic64"]